--- a/exo_01.html
+++ b/exo_01.html
@@ -35,6 +35,10 @@
             <li>Une buche glacée </li><br>
             <p>Et le tout arrosé de Champagne!<br>
                Après, j'ai pu déballer tous mes cadeaux:<br></p>
+               1. Mamie Lulu:des DVD
+               2. Mamie Elisabeth: des CD
+               2. Tonton Hugues: des livres
+
                
 
     
