2 exo et tableau

--- a/exos/01_bis_images.html
+++ b/exos/01_bis_images.html
@@ -31,7 +31,8 @@
     <h2>Une image avec un lien sur l'image</h2>
     <h3>Visitez Venise</h3>
 
-    <a  href="https://www.musement.com/fr/venise/billets-coupe-file-pour-les-transports-publics-actv-de-1-a-7-jours-1-153839/?aid=vivrevenise" target="_blank" title="la belle venise vous appel">
+    <a  href="https://www.musement.com/fr/venise/billets-coupe-file-pour-les-transports-publics-actv-de-1-a-7-jours-1-153839/?aid=vivrevenise" 
+        target="_blank" title="la belle venise vous appel">
 
         <img src="../img/venise.jpg" alt="Venise">
     </a>
