tableau et dégradé

--- a/05_tableau.html
+++ b/05_tableau.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mon premier tableau</title>
+    <title>Mon premier tableau</title>  
 <link rel="stylesheet" href="css/05_tableau.css">
+<title>LES TABLEAUX</title>
 </head>
 
 <body>
@@ -27,17 +28,6 @@
                 <th>Ordinateur portable</th>
             </tr>
         </thead>
-
-        <!-- le bas ou la fin du tableau : TFOOT les normes du W3C mettent la balise tfoot avant la balise tbody -->
-        <tfoot>
-            <tr>
-                <td>Total</td>
-                <td>57</td>
-                <td>95</td>
-                <td>87</td>
-            </tr>
-        </tfoot>
-        <!-- VOIR -->
 
         <!-- le corp du tableau: TBODY -->
         <tbody>
@@ -77,16 +67,16 @@
             </tr>
 
         </tbody>
-
-
-
-
-
-
-
-
-
-
+         <!-- le bas ou la fin du tableau : TFOOT les normes du W3C mettent la balise tfoot avant la balise tbody -->
+        <tfoot>
+            <tr>
+                <td>Total</td>
+                <td>57</td>
+                <td>95</td>
+                <td>87</td>
+            </tr>
+        </tfoot>
+       
     </table>
 </body>
 </html>
