--- a/06_degrade.html
+++ b/06_degrade.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,11 @@
     <title>Dégradé de couleurs en css</title>
     <link rel="stylesheet" href="css/06_degrade.css">
 </head>
+
 <body>
-    <section class="rectangle">coucou</section>
+    
+    <section class="carre">coucou</section>
+    <section class="cercle">coucou</section>
+
 </body>
 </html>
