selecteur, float, liste

--- a/04_selecteurs.html
+++ b/04_selecteurs.html
@@ -12,10 +12,11 @@
 <body>
     <h1>Les selecteurs CSS</h1>
 
-    <!-- Pour avoir 10 paragraphes dans une section: section>p*10 -->
+<!-- Pour avoir 10 paragraphes dans une section: section>p*10 -->
     <section>
-        <!-- pour mettre en exposant SUP -->
-        <p>1- Un 1 <sup>er</sup> paragraphe</p>
+<!-- Pour mettre en exposant SUP -->
+        <p>1- Un 1 <sup>er</sup> paragraphe
+        <br> Einstein à écrit E=mc<sup>2</sup></p>
         <p>2- j'écris toujours</p>
         <p>3- je suis en 3<sup>ème</sup>position</p>
         <p>4- je passe après</p>
@@ -26,24 +27,30 @@
         <p>9- à la traine</p>
         <p>10- et moi je suis le dernier</p>
     </section>
+    <section>
+        <p>coucou</p>
+        <p>toto</p>
+    </section>
     
-    <!-- pour avoir 5 DIV avec l'attributs class nommées zone : div*5.zone -->
-<div class="zone1">Zone 1</div>
-<div class="zone2">Zone 2</div>
-<div id="zone3">Zone 3, j'ai un identifiant zone 3</div>
-<div class="zone4">Zone 4</div>
-<div class="zone5">
-    
-    <!-- pour avoir une ul qui contient 3 li avec du texte dans les li ul>li*3{zone} -->
-    <ul class="zone1">
-        <li>zone 5 -1</li>
-        <li>zone 5 -2</li>
-        <li>zone 5 -3</li>
-    </ul>
+<!-- Pour avoir 5 DIV avec l'attributs class nommées zone : div*5.zone -->
+    <div class="zone1">
+        <p>Zone 1</p>
+    </div>
 
+    <div class="zone2">Zone 2</div>
 
-</div>
+    <div id="zone3">Zone 3, j'ai un identifiant zone 3</div>
 
+    <div class="zone4">Zone 4</div>
+
+    <div class="zone5">   
+<!-- Pour avoir une ul qui contient 3 li avec du texte dans les li ul>li*3{zone} -->
+        <ul class="zone1">
+            <li>zone 5 -1</li>
+            <li>zone 5 -2</li>
+            <li>zone 5 -3</li>
+        </ul>
+    </div> 
 </body>
 
 </html>
