zoning, cubitus et le gamin

--- a/08_zoning.html
+++ b/08_zoning.html
@@ -23,7 +23,7 @@
             <!-- ul>li*3>a -->
             <ul>
                 <li><a href="08_zoning.html">Acceuilnav</a></li>
-                <li><a href="#">Page 2</a></li>
+                <li><a href="file:///C:/Users/User/Documents/exosHTML/exos/le_gamin.html">le gamin</a></li>
                 <li><a href="#">Page 3</a></li>
             </ul>
         </nav>
