--- a/exos/cubitus_01.correction.html
+++ b/exos/cubitus_01.correction.html
@@ -10,24 +10,29 @@
 </head>
 
 <body>
+    <div id="cubitus">
 
     <section>
-        <div class="cubitus">cube</div>
-        <div class="cubitus">cube</div>
-        <div class="cubitus">cube</div>
-        <div class="cubitus">cube</div>
+        <div class="c1">CUBITUS</div>
+        <div class="c2">cube2</div>
+        <div class="c1">cube3</div>
+        <div class="c2">cube4</div>
 
-        <div class="cubitus">cube</div>
-        <div class="cubitus">cube</div>
-        <div class="cubitus">cube</div>
+        <div class="clear"></div>
 
+        <div class="c2">cube5</div>
+        <div class="c1">cube6</div>
+        <div class="c2">cube7</div>
 
-        <div class="cubitus">cube</div>
-        <div class="cubitus">cube</div>
+        <div class="clear"></div>
 
+        <div class="c1">cube8</div>
+        <div class="c2">cube9</div>
 
-        <div class="cubitus">cube</div>
+        <div class="clear"></div>
+
+        <div class="c2">cube10</div>
     </section>
-
+    </div>
 </body>
 </html>
