--- a/10_display.html
+++ b/10_display.html
@@ -28,6 +28,12 @@
 
     <section>La SECTION est de type block</section>
 
+    <div class="inline">Bonjour, ici on change l'affichage de la type block en INLINE</div>
+
+
+    </div>
+
+
     <p>Un lien dans un P : <a href="#" class="block">Ici on change l'affichage du A en block</a>, et un peut de texte pour terminer le P</p>
 
     <!-- div. pour faire une div avec class et div# pour faire une div avec id // div.toto pour faire une div avec la class toto etc... -->
