--- a/exos/01_bis_images.html
+++ b/exos/01_bis_images.html
@@ -15,6 +15,7 @@
 
     <!-- La balise img est une balise vide et est accompagné de 2 attributrs obligatoire src et alt, la source de l'image et le tecte alternatif -->
         <h2>Chat pelotte</h2>
+        <a href="../08_zoning.html">Acceuil</a>
         <img src="../img/chaton_01.jpg" alt="un joli chaton" class="block">
         
         <!-- <h3>Les 3 chatons</h3> -->
@@ -23,10 +24,7 @@
         <!-- <h4>Chat ouilleux</h4> -->
         <img src="../img/chaton_03.jpg" alt="wawww" class="block">        
         <!-- <h5></h5> -->
-        <img src="" alt="#"><img src="" alt="#" class="block">
-   
-   
-
+                     
     <h2>Une image avec un lien sur l'image</h2>
     <h3>Visitez Venise</h3>
 
